# Yuxin_MEA

./: .gitignore  AGENTS.md  README.md  README.zh.md  environment.yml  pipeline_config.json  pipeline_config_run.json  pyproject.toml  review_report.md
config/: default_tasks_params.json  default_tasks_params_01_plateviewer.json  pipeline_config.example.json  pipeline_config.json
config_manager/: config_manager.py
dataset_manager/: __init__.py  _mxassay_decoder.py  cache_store.py  dataset_manager.py  recording_entry.py
doc/: architecture.md  architecture.zh.md  burst_detection.md  pipeline_run_todo.md
experiment_manager/: __init__.py  cache_store.py  manager.py  metadata_extractor.py  recording_entry.py
notebooks/: 00_full_pipeline.ipynb  01_plate_viewer.ipynb  01_si_preprocessing.ipynb  02_generate_default_params.ipynb  03_auto_merge.ipynb  04_analyzer.ipynb  05_auto_curation.ipynb  06_iterative_burst_detector_synthetic_validation.ipynb  07_iterative_burst_detector_diagnostic.ipynb  07_iterative_burst_detector_diagnostic.py
pipeline_manager/: __init__.py  cache_store.py  config_provider.py  manager.py  pipeline_entry.py  runner.py  stage_record.py  task_record.py  well_metadata.py  work_item.py
pipeline_tasks/: __init__.py  auto_curation.py  auto_merge.py  burst_detection.py  iterative_burst_detection.py  plate_viewer.py  preprocessing.py  sorting.py
scripts/: animate_ml_umap.py  build_dim_compare_grid.py  build_slim_compare.py  build_viewer_bundles.py  inspect_ml_bursts.py  list_burst_input_files.py  prototype_burst_clustering.py  render_slim_png.py  (+3 more)
(+117 files in other folders)
