[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuxin_mea"
version = "0.1.0"
description = "MEA recording, pipeline, and analysis library for SadeghLab"
requires-python = ">=3.9"
# Scientific deps are provided by the conda environment (`environment.yml`).
# Keep `dependencies` empty so `pip install -e .` does not try to re-resolve
# conda-managed packages like torch / spikeinterface from PyPI.
dependencies = []

[project.scripts]
yuxin-mea-dashboard = "yuxin_mea.dashboard.cli:main"
yuxin-mea-run = "yuxin_mea.cli.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
